Creating the `artan-core` module

--- a/pom.xml
+++ b/pom.xml
@@ -48,4 +48,8 @@
             </plugin>
         </plugins>
     </build>
+
+    <modules>
+        <module>artan-core</module>
+    </modules>
 </project>
